layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ nav a.active {
 }
 
 .wraper {
-  max-width: 1000px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
